# helenos

uspace/app/: meson.build
uspace/app/bdsh/: meson.build  tok.c
uspace/app/wildcards/: main.c  main.h  meson.build  wildcardsTest.c
uspace/lib/: meson.build
uspace/lib/wildcards/: info.md  meson.build  wildcards.c  wildcards.h
uspace/lib/wildcards/include/wildcards/: wildcards.h
uspace/lib/wildcards/src/: wildcards.c
uspace/lib/wildcards/test/: wildcardsTest.c  wildcards_test.c
